--- a/UnionSquare.iOS/ELA/Wallet/walletCreate/view/HWMaddSignThePurseView.xib
+++ b/UnionSquare.iOS/ELA/Wallet/walletCreate/view/HWMaddSignThePurseView.xib
@@ -19,7 +19,7 @@
                 <button opaque="NO" alpha="0.5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7ae-Gn-NHs">
                     <rect key="frame" x="88" y="20" width="238" height="40"/>
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                    <state key="normal" title="添加主私钥">
+                    <state key="normal" title="添加私钥">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
                 </button>
