--- a/UnionSquare.iOS/ELA/found/SuperPoint/ViewController/FLManageSelectPointNodeInformationVC.xib
+++ b/UnionSquare.iOS/ELA/found/SuperPoint/ViewController/FLManageSelectPointNodeInformationVC.xib
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FLManageSelectPointNodeInformationVC">
             <connections>
+                <outlet property="CRBGView" destination="df4-Gb-iS5" id="55h-Uj-LrT"/>
                 <outlet property="LocationLab" destination="51Q-Zf-wKR" id="kfr-Lj-9eP"/>
                 <outlet property="NodePublickKeyLab" destination="lvW-50-Clu" id="zIn-fx-5E5"/>
                 <outlet property="OwnerPublickKeyLab" destination="CJ7-Hn-7l9" id="Gnf-oe-cuF"/>
                 <outlet property="URLLab" destination="SSn-x8-pUy" id="C6p-Sh-9xU"/>
+                <outlet property="URLTextLabel" destination="0do-Ag-h9D" id="0rx-vv-cyh"/>
+                <outlet property="URLcopyCRButtton" destination="uOK-d0-aNT" id="idK-Mb-OqS"/>
                 <outlet property="iconImageView" destination="vyJ-K4-G36" id="p8g-pT-lAd"/>
                 <outlet property="infoBGView" destination="MYJ-3d-yeN" id="g1I-bw-NxT"/>
                 <outlet property="leftLab1" destination="HoL-lq-J20" id="f06-Bw-yZk"/>
@@ -36,7 +37,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MYJ-3d-yeN">
-                    <rect key="frame" x="15" y="30" width="345" height="375"/>
+                    <rect key="frame" x="15" y="10" width="345" height="400"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="found_vote_initial" translatesAutoresizingMaskIntoConstraints="NO" id="vyJ-K4-G36">
                             <rect key="frame" x="145" y="31" width="55" height="30"/>
@@ -171,10 +172,16 @@
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="df4-Gb-iS5">
+                            <rect key="frame" x="0.0" y="102" width="345" height="298"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </view>
                     </subviews>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
+                        <constraint firstItem="df4-Gb-iS5" firstAttribute="top" secondItem="CJ7-Hn-7l9" secondAttribute="bottom" constant="18" id="07F-TR-GlH"/>
                         <constraint firstItem="uOK-d0-aNT" firstAttribute="centerY" secondItem="0do-Ag-h9D" secondAttribute="centerY" id="0KG-kb-6Kn"/>
+                        <constraint firstAttribute="bottom" secondItem="df4-Gb-iS5" secondAttribute="bottom" id="1IA-8u-FSU"/>
                         <constraint firstItem="0do-Ag-h9D" firstAttribute="top" secondItem="q52-cP-vTL" secondAttribute="bottom" constant="32" id="2DR-YS-VB7"/>
                         <constraint firstItem="MhH-IM-gCf" firstAttribute="top" secondItem="rfi-gO-KEl" secondAttribute="bottom" constant="26" id="2Ul-Fb-0zX"/>
                         <constraint firstItem="umZ-Cd-PAE" firstAttribute="centerY" secondItem="MhH-IM-gCf" secondAttribute="centerY" id="5G6-mn-7qZ"/>
@@ -190,7 +197,7 @@
                         <constraint firstItem="umZ-Cd-PAE" firstAttribute="leading" secondItem="MhH-IM-gCf" secondAttribute="trailing" constant="10" id="JgE-sY-KyH"/>
                         <constraint firstItem="RDF-Ee-2N4" firstAttribute="top" secondItem="MhH-IM-gCf" secondAttribute="bottom" constant="26" id="LYu-Wf-ob6"/>
                         <constraint firstAttribute="trailing" secondItem="lvW-50-Clu" secondAttribute="trailing" constant="15" id="Mpr-gS-WpM"/>
-                        <constraint firstAttribute="height" constant="375" id="P2J-uO-WEQ"/>
+                        <constraint firstAttribute="height" constant="400" id="P2J-uO-WEQ"/>
                         <constraint firstAttribute="trailing" secondItem="51Q-Zf-wKR" secondAttribute="trailing" constant="15" id="TJt-n5-c6d"/>
                         <constraint firstItem="vyJ-K4-G36" firstAttribute="centerX" secondItem="MYJ-3d-yeN" secondAttribute="centerX" id="U1d-Rs-hfO"/>
                         <constraint firstItem="rfi-gO-KEl" firstAttribute="leading" secondItem="MYJ-3d-yeN" secondAttribute="leading" constant="15" id="Xq7-Rp-duM"/>
@@ -198,11 +205,13 @@
                         <constraint firstItem="rfi-gO-KEl" firstAttribute="top" secondItem="HoL-lq-J20" secondAttribute="top" constant="20" id="ahV-Ra-EmX"/>
                         <constraint firstItem="CJ7-Hn-7l9" firstAttribute="top" secondItem="vyJ-K4-G36" secondAttribute="bottom" constant="10" id="c6m-11-EJp"/>
                         <constraint firstItem="wYE-79-jvN" firstAttribute="centerY" secondItem="RDF-Ee-2N4" secondAttribute="centerY" id="e1N-SA-gxF"/>
+                        <constraint firstAttribute="trailing" secondItem="df4-Gb-iS5" secondAttribute="trailing" id="fUv-yt-Md8"/>
                         <constraint firstItem="HoL-lq-J20" firstAttribute="top" secondItem="vyJ-K4-G36" secondAttribute="bottom" constant="41" id="grM-gz-5Er"/>
                         <constraint firstAttribute="trailing" secondItem="uOK-d0-aNT" secondAttribute="trailing" constant="10" id="i6U-w5-gPt"/>
                         <constraint firstItem="RDF-Ee-2N4" firstAttribute="leading" secondItem="MYJ-3d-yeN" secondAttribute="leading" constant="15" id="mtF-fK-p8o"/>
                         <constraint firstItem="CJ7-Hn-7l9" firstAttribute="leading" secondItem="MYJ-3d-yeN" secondAttribute="leading" constant="15" id="q3j-Ut-Nfe"/>
                         <constraint firstAttribute="trailing" secondItem="wYE-79-jvN" secondAttribute="trailing" constant="15" id="qaq-zx-nTs"/>
+                        <constraint firstItem="df4-Gb-iS5" firstAttribute="leading" secondItem="MYJ-3d-yeN" secondAttribute="leading" id="qjn-xe-8lR"/>
                         <constraint firstItem="vyJ-K4-G36" firstAttribute="top" secondItem="MYJ-3d-yeN" secondAttribute="top" constant="31" id="quL-uR-mZp"/>
                         <constraint firstItem="51Q-Zf-wKR" firstAttribute="centerY" secondItem="q52-cP-vTL" secondAttribute="centerY" id="rrj-0Y-8n5"/>
                         <constraint firstItem="51Q-Zf-wKR" firstAttribute="leading" secondItem="q52-cP-vTL" secondAttribute="trailing" constant="10" id="skQ-xE-ppS"/>
